--- a/veHinhTron.html
+++ b/veHinhTron.html
@@ -14,17 +14,18 @@
     <script src="test.js"></script>
 </head>
 <body>
-<!--<h3>Enter your name :</h3>-->
-<!--<input type="text" id="a"><br>-->
-<!--<h3>Score :</h3>-->
-<!--<input type="number" id="b"><br>-->
+
 <center>
     <canvas id="myCanvas" width="600px" height="600px" style="border: 1px solid black"></canvas>
 </center>
 
 <script>
+    let name1=prompt("Nhập tên của bạn =  ");
+    alert("Hello"+" "+ name1);
+    alert("Are you ready ?")
     let canvas = document.getElementById('myCanvas');
     let pen = canvas.getContext('2d');
+    let interval = setInterval(draw, 10);
     let pad = {
         width: 150,
         height: 20,
@@ -52,9 +53,11 @@
     let maxScores = Bricks.totalCol*Bricks.totalRow;
 
     //==================================
-    function checkDauvao(){
-
-    }
+     function drawScore(){
+         pen.font="16px Arial";
+         pen.fillStyle = "#0095DD";
+         pen.fillText("Score: "+Score, 8, 20);
+     }
     //================================
     //===============================================
     let BricksList = [];
@@ -70,7 +73,7 @@
 
     //==================================
     let dx = 5;
-    let dy = 2;
+    let  dy = 2;
 
     function checkCrash() {
         BricksList.forEach(function (b) {
@@ -78,10 +81,12 @@
                 if (circle.x >= b.x && circle.x <= b.x + Bricks.width && circle.y + 15 >= b.y && circle.y-15<=b.y+Bricks.height){
                     dy=-dy;
                     b.checkBreak=true;
-                    SCore+=1;
+                    Score+=1;
                     if(Score>=maxScores){
                         isGameOver=true;
                         isGameWin=true;
+                        document.location.reload();
+                        clearInterval(interval);
                     }
                 }
                     }
@@ -105,11 +110,14 @@
             bouncedBack()
             drawBricks()
             checkCrash()
+            drawScore()
             if (circle.y > canvas.clientHeight - 15) {
                 isGameOver = true;
             }
         } else {
             checkGameOver()
+            document.location.reload();
+            clearInterval(interval);
         }
     }
 
@@ -117,8 +125,8 @@
     //=================================================
     function checkGameOver() {
         if(isGameWin){
-            alert("You Win");
-        }else alert('you lose');
+            alert("You Win with 15 Score");
+        }else alert('you lose with '+ " "+ Score + " Score");
 
     }
     //======================================================
