--- a/test1.html
+++ b/test1.html
@@ -4,25 +4,56 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        body{
-            background-color: pink;
-        }
         canvas {
             background-color: #99ff99;
         }
     </style>
-    <script src="test.js"></script>
+    <script src="test1.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="start-box">
+    <form action="">
+        <div>
+            <center><h1>Welcome!!!</h1></center>
+            <div>
+                <div id="inputName"><p>Tên của bạn là :</p></div>
+                <input type="text" id="a" class="name2" placeholder="Nhập tên"><br><br>
+                <span><center><button type="button" id="play" onclick="start2()">Play</button></center></span>
+            </div>
+        </div>
+    </form>
+</div>
+<!--===============================================-->
+<div id="canvas1" style="display: none">
+    <center>
+        <canvas id="myCanvas" width="600px" height="600px" style="border: 1px solid black"></canvas>
+    </center>
+</div>
+<!--==================================================-->
+<div id="end-game" style="display: none">
+    <div>
+        <div>
+            <center><p id="win">You Win !!!</p></center>
+        </div>
 
-<center>
-    <canvas id="myCanvas" width="600px" height="600px" style="border: 1px solid black"></canvas>
-</center>
+    </div>
+    <div>
+        <div id="lose">
+            <center><p> You Lose !!!</p></center>
+            <p id="score"></p>
+        </div>
+    </div>
+    <span>
+       <center> <button id="winagain" onclick="window.location.reload()"> Play Again</button></center>
+    </span>
+</div>
 
 <script>
-    let name1=prompt("Nhập tên của bạn =  ");
-    alert("Hello"+" "+ name1);
-    alert("Are you ready ?")
+    let name2 = document.getElementById("a").value;
+    // let name1=prompt("Nhập tên của bạn =  ");
+    // alert("Hello"+" "+ name1);
+    // alert("Are you ready ?")
     let canvas = document.getElementById('myCanvas');
     let pen = canvas.getContext('2d');
     let interval = setInterval(draw, 10);
@@ -48,17 +79,24 @@
     let circle = new Circle(x, y);
     circle.drawCircle(pen);
     let isGameOver = false;
-    let isGameWin=false;
-    let Score=0;
-    let maxScores = Bricks.totalCol*Bricks.totalRow;
+    let isGameWin = false;
+    let Score = 0;
+    let maxScores = Bricks.totalCol * Bricks.totalRow;
 
     //==================================
-    function drawScore(){
-        pen.font="16px Arial";
+    function drawScore() {
+        pen.font = "16px Arial";
         pen.fillStyle = "#0095DD";
-        pen.fillText("Score: "+Score, 8, 20);
+        pen.fillText("Score: " + Score, 8, 20);
     }
+
     //================================
+    let loop;
+
+    function start2() {
+        loop = setInterval(moveCircle, 10)
+    }
+
     //===============================================
     let BricksList = [];
     for (let i = 0; i < Bricks.totalRow; i++) {
@@ -73,19 +111,19 @@
 
     //==================================
     let dx = 5;
-    let  dy = 2;
+    let dy = 2;
 
     function checkCrash() {
         BricksList.forEach(function (b) {
             if (!b.checkBreak) {
-                if (circle.x >= b.x && circle.x <= b.x + Bricks.width && circle.y + 15 >= b.y && circle.y-15<=b.y+Bricks.height){
-                    dy=-dy;
-                    b.checkBreak=true;
-                    Score+=1;
-                    if(Score>=maxScores){
-                        isGameOver=true;
-                        isGameWin=true;
-                        document.location.reload();
+                if (circle.x >= b.x && circle.x <= b.x + Bricks.width && circle.y + 15 >= b.y && circle.y - 15 <= b.y + Bricks.height) {
+                    dy = -dy;
+                    b.checkBreak = true;
+                    Score += 1;
+                    if (Score >= maxScores) {
+                        isGameOver = true;
+                        isGameWin = true;
+                        // document.location.reload();
                         clearInterval(interval);
                     }
                 }
@@ -95,8 +133,12 @@
 
     // =============================================
     function moveCircle() {
+        document.getElementById("canvas1").style.display = "block"
+        document.getElementById("start-box").style.display = "none"
+        pen.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight)
         if (!isGameOver) {
             pen.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);
+
             if (circle.x < 15 || circle.x > canvas.clientWidth - 15) {
                 dx = -dx;
             }
@@ -112,22 +154,32 @@
             checkCrash()
             drawScore()
             if (circle.y > canvas.clientHeight - 15) {
+                checkGameOver()
                 isGameOver = true;
+                clearInterval(loop)
+
+
             }
         } else {
             checkGameOver()
-            document.location.reload();
-            clearInterval(interval);
+            clearInterval(loop)
+            // document.location.reload();
         }
     }
 
-    setInterval(moveCircle, 10);
     //=================================================
     function checkGameOver() {
-        if(isGameWin){
-            alert( "congratulations" + name1 + "Win with 15 Score");
-        }else alert('You lose with '+ " "+ Score + " Score");
-
+      if(isGameWin){
+          document.getElementById("canvas1").style.display = "none"
+          document.getElementById("end-game").style.display = "block"
+          document.getElementById("lose").style.display = "none"
+          document.getElementById("winagain").style.display = "block"
+      }else {document.getElementById("score").innerHTML += " you lose with " + Score + " score";
+        document.getElementById("canvas1").style.display = "none"
+        document.getElementById("end-game").style.display = "block"
+        document.getElementById("win").style.display = "none"
+        document.getElementById("winagain").style.display = "block"
+    }
     }
     //======================================================
     function bouncedBack() {
@@ -152,7 +204,7 @@
     //==============================================
     function drawBricks() {
         BricksList.forEach(function (b) {
-            if(!b.checkBreak) {
+            if (!b.checkBreak) {
                 pen.beginPath();
                 pen.rect(b.x, b.y, Bricks.width, Bricks.height);
                 pen.fill();
